# planner-scan

./: pyproject.toml
data/: amplitud.txt  minors.json
planner_scan/: scan_minors.ipynb
